accounts-k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: accounts-api
  name: accounts-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: accounts-api
    spec:
      containers:
      - image: quay.io/rh-ee-srehman/cumulus-account:latest
        imagePullPolicy: Always
        name: accounts-api
        ports:
        - containerPort: 1880
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
