accounts-k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: accounts-api
  name: accounts-api
spec:
  ports:
  - name: 1880-tcp
    port: 1880
    protocol: TCP
    targetPort: 1880
  selector:
    app: accounts-api
  sessionAffinity: None
  type: ClusterIP
